@@ -39,6 +39,8 @@ malformed Editra style sheet.
 +Fix Cut/Delete line commands for when the selection includes the last line.
 +Fix Put command behavior in vi emulation to put it after the current carat position.
 +Fix Python autocompletion for documents that have tabs in them.
++Fix some issues in the Xml/Html autocompleter that would incorrectly insert
+closing tags for tags that didn't require them.
 
 #-----------------------------------------------------------------------------#
 
